--- a/app/web/index.html
+++ b/app/web/index.html
@@ -5,18 +5,18 @@
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+    <meta name="description" content="Jerememe" />
 
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="app" />
-    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <meta name="apple-mobile-web-app-title" content="Jerememe" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.webp" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/webp" href="favicon.webp" />
 
-    <title>app</title>
+    <title>Jerememe</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body style="background-color: #060606">
