Improve web page loading presentation

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="Jerememe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
@@ -18,8 +19,13 @@
 
     <title>Jerememe</title>
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
-  <body style="background-color: #060606">
+  <body>
     <script src="flutter_bootstrap.js" async></script>
+    <div id="logo-container">
+      <img src="assets/loading.webp" />
+      <div id="loading-text">LOADING...</div>
+    </div>
   </body>
 </html>
